# reflex-qrcode

./: README.md  pyproject.toml  reflex-qrcode.code-workspace
custom_components/reflex_qrcode/: __init__.py  qrcode.py
qrcode_demo/: requirements.txt  rxconfig.py
qrcode_demo/qrcode_demo/: qrcode_demo.py
